<resources>
    <string name="app_name">FireChat</string>

    <!-- common -->
    <string name="action_confirm">Confirm</string>
    <string name="action_cancel">Cancel</string>
    <string name="country_code_format">%s (+%s)</string>
    <string name="tap_twice_to_exit">Tap one more time to exit</string>

    <!-- first run -->
    <string name="first_run_btn_sign_in">Sign in</string>
    <string name="first_run_btn_sign_up">Sign up</string>

    <!-- phone authentication -->
    <string name="phone_auth_title">Please input your device phone number.</string>
    <string name="phone_auth_desc">Phone number authentication is required to use the service.</string>
    <string name="phone_auth_form_hint">Phone number</string>
    <string name="phone_auth_next">Next</string>
    <string name="phone_auth_confirmation">The verification SMS will be sent to this number.</string>

    <!-- code verification -->
    <string name="verification_code_resend">Resend verification code</string>
    <string name="verification_code_title">Enter verification code</string>
    <string name="verification_code_desc">Verification code has been sent to</string>
    <string name="verification_action">Verify</string>

    <!-- search country -->
    <string name="search_country_hint">Search country</string>

    <!-- new profile -->
    <string name="new_profile_name_hint">Input your name</string>

    <!-- error message -->
    <string name="error_invalid_number">Make sure that entered a valid phone number.</string>
    <string name="error_sign_in_failed">Sign in failed</string>
    <string name="error_invalid_verification_code">Invalid or expired verification code.</string>
    <string name="error_unknown">Unknown error</string>

</resources>
