<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.tistory.mybstory.firechat.ui.auth.phone.code.VerifyCodeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingTop="16dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_page_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/verification_code_title"
            app:layout_constraintStart_toStartOf="@id/btn_back"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <TextView
            android:id="@+id/tv_page_desc"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/verification_code_desc"
            app:layout_constraintStart_toStartOf="@id/tv_page_title"
            app:layout_constraintTop_toBottomOf="@id/tv_page_title" />

        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_page_desc"
            android:text="@{vm.phoneNumberLiveData}"
            tools:text="+1 111 1111 1111" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="6"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:textHandler="@{vm.handleTextInput}"
                android:inputType="number"
                android:maxLength="6" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:enabled="@{etVerificationCode.text.length() == 6}"
            android:text="@string/verification_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_verification_code" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_code_resend"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_verify" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
