<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.tistory.mybstory.firechat.ui.auth.signup.PhoneAuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/btn_back"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            android:layout_marginTop="16dp"
            android:text="@string/phone_auth_title"
            style="@style/TextAppearance.MaterialComponents.Headline5"/>

        <TextView
            android:id="@+id/tv_page_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_page_title"
            app:layout_constraintTop_toBottomOf="@id/tv_page_title"
            android:layout_marginTop="8dp"
            android:text="@string/phone_auth_desc"
            style="@style/TextAppearance.MaterialComponents.Body2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tv_selected_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/tv_page_desc"
            app:layout_constraintTop_toBottomOf="@id/tv_page_desc"
            android:layout_marginTop="64dp"
            android:text="@{vm.selectedCountry.displayCountry}"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textAllCaps="false"
            tools:text="South Korea"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_selected_country"
            android:layout_marginTop="8dp"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_page_desc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/phone_auth_form_hint"
                android:inputType="phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense" />

        </com.google.android.material.textfield.TextInputLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
